【测试成功】成功无法筛选但有一个学历倒置的小bug，其他栏目功能正常